Update theme switcher, fix sidebar styling, remove appearance tab, update dark mode colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -92,7 +92,7 @@
   .dark {
   --background: oklch(0 0 0);
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
+  --card: oklch(0.039 0 0);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0 0 0);
   --popover-foreground: oklch(0.985 0 0);
@@ -106,7 +106,7 @@
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --destructive-foreground: oklch(0.577 0.245 27.325);
-  --border: oklch(1 0 0 / 0.1);
+  --border: rgb(31, 31, 31);
   --input: oklch(1 0 0 / 0.15);
   --ring: oklch(0.439 0 0);
   --chart-1: oklch(0.488 0.243 264.376);
